# portfolio-quant-terminal

./: .gitignore
.github/: dependabot.yml  (+1 more)
quant_terminal/: .env.example  .gitignore  Dockerfile.api  README.md  app.py  docker-compose.dev.yml  pyproject.toml  requirements.txt  setup.py
quant_terminal/.streamlit/: config.toml  secrets.toml.example
quant_terminal/api/: auth.py  cache.py  deps.py  main.py  models.py
quant_terminal/api/routes/: admin.py  auth.py  catalysts.py  cross_asset.py  macro.py  news.py  options.py  portfolio.py  regime.py  scanners.py  universe.py
quant_terminal/api/workers/: worker.py
quant_terminal/api/ws/: prices.py
quant_terminal/config/: alerts.yaml  bookmarks.yaml  conviction_weights.yaml  dod_programs.yaml  execution.yaml  hedge_defaults.yaml  hf_registry.yaml  hyperscaler_capex.yaml  launches_2026.yaml  macro_calendar_2026.yaml  private_watchlist.yaml  risk_limits.yaml  settings.yaml  surveillance.yaml  trading_watchlist.yaml  universe.yaml  universe_cross_asset.yaml  watchlists.yaml
quant_terminal/docs/: CDC.md  DASHBOARD.md  PHASE1_PLAN.md  Portage.md
quant_terminal/scripts/: hash_password.py
quant_terminal/src/: __init__.py  main.py
quant_terminal/src/alerts/: __init__.py  channels.py  dashboards.py  engine.py  state.py  triggers.py
quant_terminal/src/analytics/: factors.py  optimizer.py  scenarios.py
quant_terminal/src/backtest/: __init__.py  dashboards.py  engine.py  metrics_diff.py  optimizer.py  rules.py
quant_terminal/src/calendar_engine/: __init__.py  dashboards.py  earnings.py  historical_postearnings.py  implied_moves.py  macro_events.py  space_launches.py
quant_terminal/src/common/: __init__.py  schemas.py
quant_terminal/src/data/: analyst_ratings.py  degiro_parser.py  fred_client.py  fx.py  loaders.py
quant_terminal/src/data_sec/: __init__.py  cash_runway.py  dashboards.py  dilution.py  dod_budget.py  edgar_client.py  etf_flows.py  form13d.py  form13f.py  form4.py  forms_index.py  hf_registry.py  hyperscaler_capex.py  overview.py  sam_gov.py  xbrl_facts.py
quant_terminal/src/decision/: __init__.py  conviction.py  cross_asset_dashboard.py  dashboards.py  hedge_cost.py  journal_store.py  rerating_score.py  risk_parity_preview.py  var_contribution_sizing.py
quant_terminal/src/event_trading/: __init__.py  dashboards.py  earnings_simulator.py  event_sensitivity.py  pre_event_wizard.py
quant_terminal/src/execution/: __init__.py  alpaca_broker.py  dashboards.py  modes.py  oms.py  positions.py  validators.py
quant_terminal/src/kalman/: monitoring.py
quant_terminal/src/liquidity/: __init__.py  adv.py  borrow.py  dashboards.py  slippage.py
quant_terminal/tests/: conftest.py  test_alerts.py  test_api_auth.py  test_api_cache.py  test_api_health.py  test_api_macro.py  test_api_p2.py  test_api_p3.py  test_api_services_p1.py  test_api_universe.py  test_backtest.py  test_calendar_news.py  test_config.py  test_cross_asset.py  test_decision.py  test_degiro_parser.py  test_event_trading.py  test_execution.py  test_fx.py  test_liquidity.py  test_macro_regime.py  test_portfolio.py  test_portfolio_greeks.py  test_risk.py  test_services_cross_asset.py  test_services_macro.py  test_services_news_catalysts.py  test_services_options.py  test_services_portfolio.py  test_services_regime.py  test_services_scanner.py  test_snapshot.py  test_tax_lots.py  test_theme_v3.py  test_trading.py  test_tv_chart.py  test_watchlist.py
quant_terminal/web/: .env.example  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  test_ws.html  vitest.config.ts
(+157 files in other folders)
