[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_terminal"
version = "0.1.0"
description = "Institutional-grade quant terminal: portfolio analytics, short-squeeze scanner, Kalman elastic trading"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aymeric Faureav" }]
license = { text = "Proprietary" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "plotly>=5.20",
    "streamlit>=1.32",
    "streamlit-lightweight-charts>=0.7.20",
    "lightweight-charts>=2.0",
    "yfinance>=0.2.40",
    "alpaca-py>=0.21",
    "fredapi>=0.5",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "pydantic>=2.5",
    "httpx>=0.27",
    "feedparser>=6.0",
    "streamlit-autorefresh>=1.0",
    "anthropic>=0.40",
    # Vendored legacy short-squeeze scanner (vendor/legacy_squeeze/)
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    # HMM regime detection engine
    "hmmlearn>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.10",
]

# FastAPI / WebSocket / Redis layer (Phase 0 of the Streamlit → Next.js portage).
# Install with: pip install -e .[api]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "python-jose[cryptography]>=3.3.0",   # JWT
    "passlib[bcrypt]>=1.7.4",              # password hashing
    "python-multipart>=0.0.9",             # multipart uploads (DEGIRO CSV)
    "websockets>=12.0",                    # used by uvicorn/standard
    "fakeredis>=2.20.0",                   # in-memory Redis for tests
]

[project.scripts]
quant-terminal = "src.main:main"
quant-terminal-api = "api.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
